2017-01-27

        * Version 1.2.0 released
        =========================

        Add GModelTemporalPhaseCurve class (#1916)
        Monte Carlo for empty maps or map cubes no longer throws an exception (#1915)
        Add GModelTemporalLightCurve class (#1914)
        Add GSkyMap FITS HDU constructor
        Add leap second for 1-1-2017 (#1887)
        Add region() method to GModelSpatial (#1764)
        Correct containment radius computation in GCTAPsf2D::containment_radius (#1876)
        Add composite spatial and spectral models (#1706)
        Add GObservations::save_covmat() method (#1863)
        Add GFft and GFftWavetable classes (#1731)
        Add GNdarray class (#1768)
        Increase precision of gammalib::str() floating point functions
        Add GFits::publish() methods (#1231)
        Add GVOTable class (#1231)
        Add multiplicative spectral model (#1861)
        Add additional time setting and getting methods (#1856)
        Check CTA response table dimension for consistency (#1848)
        Remove eval_gradients() methods and remplace by eval() method with optional gradients argument (#1847)
        Add GTestSuite::test_value() method with automatic precision computation
        Add GSkyMap::is_empty() method (#1828)
        Add GApplication access by index operator (#1838)
        Add GApplication::pars() and GApplicationPar::current_value() methods (#1838)
        Add GLog is_open(), is_empty() and written_size() methods (#1837)
        Fix invalid pointer problem in GLog copies (#1823)
        Fix GSkyMap::publish() bug for empty sky maps (#1835)
        Fix loss of application name and version (#1835)
        Add methods for logging in applications (#1828)
        Fix removal of Python wrappers after make clean (#1826)
        Add GModelSpectralExpInvPlaw class (#1800)
        Add GModelSpectralPlawEnergyFlux class (#1790)
        Rename GModelSpectralPlaw2 to GModelSpectralPlawPhotonFlux (#1790)


2016-07-24
