@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.2.0
 
-27 January 2017
+1 February 2017
 
 
 1. Introduction
@@ -289,6 +289,10 @@ axis dimension (#1848).
 
 The formula for the containment radius computation in GCTAPsf2D::containment_radius
 was wrong and has been corrected (#1876).
+
+The GCTABackground3D::mc() method now verifies that the specified energy is within
+the validity range of the background template. Otherwise an exception is thrown
+(#1918).
 
 
 21. COMPTEL interface
