@@ -1,8 +1,9 @@
-2017-01-27
+2017-02-01
 
         * Version 1.2.0 released
         =========================
 
+        Check that MC energy is comprised in validity range for CTA 3D background template (#1918)
         Add GModelTemporalPhaseCurve class (#1916)
         Monte Carlo for empty maps or map cubes no longer throws an exception (#1915)
         Add GModelTemporalLightCurve class (#1914)
